# merit_dlt

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.cursor/rules/: merit.mdc  python.mdc
.dlt/: config.toml  secrets.toml.example
merit/: __init__.py  auth.py  dates.py  paginators.py
