[project]
name = "merit-dlt"
version = "0.1.0"
description = "Source to import data from Merit Aktiva"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.6.1",
    "types-requests>=2.32.0.20241016",
]

[project.optional-dependencies]
dev = [
    "duckdb>=1.2.0",
    "pytest>=8.0.0",
]
